# arduino33ble-rust

./: Cargo.toml  memory.x
.cargo/: config
src/: main.rs
